--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anold Stephen Minja | Portfolio</title>
-    <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Lucide Icons -->
     <script src="https://unpkg.com/lucide@latest"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
@@ -43,12 +41,10 @@
 </head>
 <body class="bg-gray-900 text-gray-200">
 
-    <!-- Header & Navigation -->
     <header class="sticky top-0 z-50 bg-gray-900 bg-opacity-90 backdrop-blur-md shadow-lg">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="#home" class="text-2xl font-bold text-teal-400 hover:text-teal-300 transition-colors duration-300">Noldy22</a>
             <div class="space-x-8 hidden md:flex" id="main-nav-links">
-                <!-- Added IDs for easier JavaScript selection -->
                 <a href="#about" id="nav-about" class="nav-link text-lg hover:text-teal-400 transition-colors duration-300">About</a>
                 <a href="#skills" id="nav-skills" class="nav-link text-lg hover:text-teal-400 transition-colors duration-300">Skills</a>
                 <a href="#projects" id="nav-projects" class="nav-link text-lg hover:text-teal-400 transition-colors duration-300">Projects</a>
@@ -59,7 +55,6 @@
 
     <main class="container mx-auto px-6">
 
-        <!-- Hero Section -->
         <section id="home" class="min-h-screen flex items-center justify-center text-center">
             <div class="max-w-4xl fade-in" style="transition-delay: 0.2s;">
                 <h1 class="text-5xl md:text-7xl font-extrabold text-white leading-tight">
@@ -74,11 +69,9 @@
             </div>
         </section>
 
-        <!-- About Section -->
         <section id="about" class="py-20 md:py-32">
             <div class="bg-gray-800 p-8 md:p-12 rounded-3xl shadow-xl border-t-4 border-teal-500 fade-in">
                 <h2 class="text-4xl font-bold text-white mb-6">About Me</h2>
-                <!-- Profile photo -->
                 <img src="me.jpg" alt="Anold Stephen Minja" class="w-48 h-48 rounded-full object-cover mb-6 md:float-right md:ml-8">
                 <p class="text-lg text-gray-300 leading-relaxed">
                     Hello, I'm Anold Stephen Minja, a dedicated pharmacy student from Dar es Salaam, Tanzania, set to graduate in 2026. Beyond my academic pursuits, I am an ambitious individual with a diverse skill set in technology, finance, and creative arts. My personal and professional projects are a testament to my commitment to continuous learning and building valuable solutions.
@@ -86,11 +79,9 @@
             </div>
         </section>
 
-        <!-- Skills Section -->
         <section id="skills" class="py-20 md:py-32">
             <h2 class="text-4xl font-bold text-white text-center mb-12 fade-in">My Expertise</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- Skill Card 1 -->
                 <div class="bg-gray-800 p-8 rounded-3xl shadow-lg border border-gray-700 hover:border-teal-500 transition-all duration-300 transform hover:scale-105 fade-in">
                     <div class="flex items-center space-x-4 mb-4">
                         <span class="text-4xl text-teal-400">
@@ -104,7 +95,6 @@
                         <li>E-commerce & Dropshipping: Managing and operating online retail ventures.</li>
                     </ul>
                 </div>
-                <!-- Skill Card 2 -->
                 <div class="bg-gray-800 p-8 rounded-3xl shadow-lg border border-gray-700 hover:border-teal-500 transition-all duration-300 transform hover:scale-105 fade-in">
                     <div class="flex items-center space-x-4 mb-4">
                         <span class="text-4xl text-teal-400">
@@ -117,7 +107,6 @@
                         <li>Problem-Solving: Creating practical web-based solutions, such as my personal finance tracker.</li>
                     </ul>
                 </div>
-                <!-- Skill Card 3 -->
                 <div class="bg-gray-800 p-8 rounded-3xl shadow-lg border border-gray-700 hover:border-teal-500 transition-all duration-300 transform hover:scale-105 fade-in">
                     <div class="flex items-center space-x-4 mb-4">
                         <span class="text-4xl text-teal-400">
@@ -133,13 +122,10 @@
             </div>
         </section>
 
-        <!-- Projects Section -->
         <section id="projects" class="py-20 md:py-32">
             <h2 class="text-4xl font-bold text-white text-center mb-12 fade-in">My Work</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-                <!-- Project Card 1: Noldy22 -->
                 <div class="bg-gray-800 p-8 rounded-3xl shadow-lg border border-gray-700 hover:border-teal-500 transition-all duration-300 fade-in">
-                    <!-- Placeholder image for Noldy22 -->
                     <img src="noldy22.png" alt="Noldy22 Screenshot" class="w-full h-48 object-cover rounded-xl mb-4">
                     <h3 class="text-3xl font-semibold text-white mb-4">Noldy22</h3>
                     <p class="text-lg text-gray-300 mb-6">
@@ -149,9 +135,7 @@
                         Visit
                     </a>
                 </div>
-                <!-- Project Card 2: NolMart -->
                 <div class="bg-gray-800 p-8 rounded-3xl shadow-lg border border-gray-700 hover:border-teal-500 transition-all duration-300 fade-in">
-                    <!-- Placeholder image for NolMart -->
                     <img src="NolMart.png" alt="NolMart Screenshot" class="w-full h-48 object-cover rounded-xl mb-4">
                     <h3 class="text-3xl font-semibold text-white mb-4">NolMart</h3>
                     <p class="text-lg text-gray-300 mb-6">
@@ -161,7 +145,6 @@
                         Visit
                     </a>
                 </div>
-                <!-- Project Card 3: Personal Finance Tracker -->
                 <div class="bg-gray-800 p-8 rounded-3xl shadow-lg border border-gray-700 hover:border-teal-500 transition-all duration-300 col-span-1 md:col-span-2 fade-in">
                     <img src="financial-tracker.png" alt="Personal Finance Tracker Screenshot" class="w-full h-48 object-cover rounded-xl mb-4">
                     <h3 class="text-3xl font-semibold text-white mb-4">Personal Finance Tracker</h3>
@@ -175,7 +158,6 @@
             </div>
         </section>
 
-        <!-- Contact Section -->
         <section id="contact" class="py-20 md:py-32">
             <div class="bg-gray-800 p-8 md:p-12 rounded-3xl shadow-xl text-center fade-in">
                 <h2 class="text-4xl font-bold text-white mb-4">Let's Work Together</h2>
@@ -187,7 +169,6 @@
                     <a href="https://wa.me/255755904987" class="bg-gray-700 hover:bg-teal-500 text-white font-bold py-3 px-8 rounded-full shadow-lg transition-all duration-300 transform hover:scale-105">WhatsApp</a>
                 </div>
 
-                <!-- Gemini API-powered Email Draft Feature -->
                 <div class="mt-16">
                     <h3 class="text-2xl font-bold text-white mb-4">Need help drafting your message?</h3>
                     <div class="max-w-2xl mx-auto">
@@ -203,7 +184,6 @@
         </section>
     </main>
 
-    <!-- Footer -->
     <footer class="bg-gray-900 py-8 text-center text-gray-500">
         <p>&copy; 2025 Anold Stephen Minja. All rights reserved.</p>
         <div class="flex items-center justify-center mt-2">
@@ -214,6 +194,12 @@
             <span class="text-sm text-gray-400 ml-1">Gemini API</span>
         </div>
     </footer>
+
+    <script>
+      window.env = {
+        GEMINI_API_KEY: "%%GEMINI_API_KEY%%"
+      };
+    </script>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
@@ -270,8 +256,8 @@
                             parts: [{ text: prompt }]
                         }],
                     };
-                    // IMPORTANT: Replace the empty string below with your own Gemini API key.
-                    // This is required because the key is not automatically provided when hosting locally.
+                    
+                    // This is the updated line that gets the API key from the environment variable.
                     const apiKey = window.env.GEMINI_API_KEY;
                     const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
 
