--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                 navObserver.observe(section);
             });
             
-            // --- Existing Scroll-based Animations ---
+            // --- Existing Scroll-based Animations ----
             const animationObserver = new IntersectionObserver(entries => {
                 entries.forEach(entry => {
                     if (entry.isIntersecting) {
